Switch to a more consistent and easier naming scheme

--- a/celeste/skin-mod-template/style.css
+++ b/celeste/skin-mod-template/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .bg {
-    background-image: url(Images/Farewell_BG.png);
+    background-image: url(images/Farewell_BG.png);
     background-size: cover;
     position: fixed;
     margin: 0;
